  the same maxUses counter)
- Fix reference to undefined variable $skillID in ai_skillUse2()
- Make _stopWhenHit condition not count party members, and stop counting a
  monster as aggressive if it hit you in the past, but then attacked someone
  else
- "Total Damage" display in 's' command now includes damage from skills
- "exp reset" command now resets damage statistics in 's' command

New features:
- Mask password input display '*' instead of your real password (Only on linux
  console)
- If old files (from before the CVS cleanup) are found, warn the user
  and bail out. Too many people are reporting "bugs" that are a result
  of conflicts with old files.
- More avoidGM modes. See the news avoid the new avoidGM_near config option.
- The autoresponse system is now back, and improved. The chat_resp.txt
  format has changed. Kore will also not respond to people who are repeating
  themselves.
- teleportAuto_search will now prevent attackAuto from attacking monsters in
  the event that no monsters you are searching for exist onscreen.

New config options:
- ksPlayers is a comma-seperated lists of player names that should be treated
  as if they were in your party for the purpose of KS checks.
- beepDomains contains a list of message domains (see Log.pm) for which
  openkore will beep.
- beepDomains_notInTown contains a list of message domains that are exempted
  from beepDomains if you are in a town.
- beepOnChat and beepOnPM were removed. Use this instead:
  beepDomains publicchat,emotion,pm
- New selfCondition _whenPermitSkill _whenNotPermitSkill for use in auto-skill
  usage blocks; they are true/false respectively when you have been granted
  use of that temporary skill.
- New condition _smartEncore for useSelfSkill. When 1, it will cast the
  Encore skill instead of this skill if Encore would cause this skill to
  be cast (saves SP for bards and dancers).
- avoidGM_near now supports different modes:
  0 - disabled (do not avoid GM)
  1 - teleport & disconnect