@@ -27,7 +27,7 @@ use base qw(Exporter);
 our %EXPORT_TAGS = (
 	config  => [qw(%arrowcraft_items %avoid @chatResponses %cities_lut %config %consoleColors %directions_lut %equipTypes_lut %haircolors @headgears_lut %items_control %items_lut %itemSlotCount_lut %itemsDesc_lut %itemTypes_lut %jobs_lut %maps_lut %masterServers %npcs_lut %portals_lut %responses %sex_lut %shop %skills_lut %skills_rlut %skillsID_lut %skillsID_rlut %skillsDesc_lut %skillsLooks %skillsArea %skillsEncore %skillsSP_lut %spells_lut %emotions_lut %timeout $char %mon_control)],
 	ai      => [qw(@ai_seq @ai_seq_args %ai_v $AI $AI_forcedOff %targetTimeout)],
-	state   => [qw($accountID @chars %cart %field @itemsID %items @monstersID %monsters @npcsID %npcs @playersID %players @portalsID %portals @storeList $currentChatRoom @currentChatRoomUsers @chatRoomsID %chatRooms @skillsID %storage @storageID @arrowCraftID %guild %incomingGuild @spellsID %spells @unknownObjects $statChanged $skillChanged $useArrowCraft)],
+	state   => [qw($accountID @chars @chars_old %cart %field @itemsID %items @monstersID %monsters @npcsID %npcs @playersID %players @portalsID @portalsID_old %portals %portals_old @storeList $currentChatRoom @currentChatRoomUsers @chatRoomsID %chatRooms @skillsID %storage @storageID @arrowCraftID %guild %incomingGuild @spellsID %spells @unknownObjects $statChanged $skillChanged $useArrowCraft)],
 	network => [qw($remote_socket $charServer $conState $encryptVal $ipc $lastPacketTime $xkore)],
 	interface => [qw($interface)],
 	misc    => [qw($buildType $quit @lastpm %lastpm @privMsgUsers %timeout_ex $shopstarted $dmgpsec $totalelasped $elasped $totaldmg %overallAuth %responseVars)],
@@ -139,6 +139,7 @@ our $AI_forcedOff;
 # Game state
 our $accountID;
 our @chars;
+our @chars_old;
 our %cart;
 our %field;
 our @itemsID;
@@ -150,7 +151,9 @@ our %npcs;
 our @playersID;
 our %players;
 our @portalsID;
+our @portalsID_old;
 our %portals;
+our %portals_old;
 our @storeList;
 our $currentChatRoom;
 our @currentChatRoomUsers;
