@@ -22,6 +22,7 @@ Bug fixes:
   else
 - "Total Damage" display in 's' command now includes damage from skills
 - "exp reset" command now resets damage statistics in 's' command
+- Portal recording has been fixed.
 
 New features:
 - Mask password input display '*' instead of your real password (Only on linux
